--- a/action.yaml
+++ b/action.yaml
@@ -201,8 +201,10 @@ runs:
       uses: actions/cache/save@v4
       with:
         path: |
+          ~/.npm
           ~/.gradle/caches
           ~/.gradle/wrapper
+          ~/.gradle/wrapper/dists
           /opt/android-sdk-linux/platforms
           /opt/android-sdk-linux/build-tools
           /opt/android-sdk-linux/ndk
