--- a/action.yaml
+++ b/action.yaml
@@ -24,12 +24,6 @@ inputs:
   apiCallbackUrl:
     description: "Notify callback url"
     required: false
-  apiCallbackAuthUser:
-    description: "Notify callback url auth user"
-    required: false
-  apiCallbackAuthPassword:
-    description: "Notify callback url auth password"
-    required: false
   useNode:
     description: "Use node?"
     required: false
@@ -71,7 +65,6 @@ runs:
           --retry-delay 2 \
           --connect-timeout 10 \
           --max-time 120 \
-          -u ${{ inputs.apiCallbackAuthUser }}:${{ inputs.apiCallbackAuthPassword }} \
           -o /dev/null -sS -w "%{http_code}\n" "$FULL_URL")
         curl_exit=$?
         if [ $curl_exit -ne 0 ] || [ "$http_code" -ne 200 ]; then
@@ -198,36 +191,30 @@ runs:
        SSH_PASSPHRASE: ${{ inputs.ssh_passphrase }}
       run: |
        set -euo pipefail
-       eval "$(ssh-agent -s)"      
+       eval "$(ssh-agent -s)"
        echo "SSH_AUTH_SOCK=$SSH_AUTH_SOCK" >> $GITHUB_ENV
        echo "SSH_AGENT_PID=$SSH_AGENT_PID" >> $GITHUB_ENV
        mkdir -p ~/.ssh
        chmod 700 ~/.ssh
-       # ulož klíč
-       printf "%s" "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-       chmod 600 ~/.ssh/id_rsa
-       
+
        if [ -n "${SSH_PASSPHRASE:-}" ]; then
-         # připrav askpass helper
+         # připrav askpass helper pro passphrase
          printf '#!/usr/bin/env bash\necho "$SSH_PASSPHRASE"\n' > ~/askpass.sh
          chmod +x ~/askpass.sh
-         # přidej klíč bez TTY
-         DISPLAY=none SSH_ASKPASS=~/askpass.sh setsid -w ssh-add ~/.ssh/id_rsa </dev/null
+         # přidej klíč přímo z stdin bez uložení na disk
+         printf "%s" "$SSH_PRIVATE_KEY" | DISPLAY=none SSH_ASKPASS=~/askpass.sh setsid -w ssh-add - </dev/null
+         rm -f ~/askpass.sh
        else
-         # klíč bez passphrase
-         ssh-add ~/.ssh/id_rsa
+         # klíč bez passphrase - přímo ze stdin
+         printf "%s" "$SSH_PRIVATE_KEY" | ssh-add -
        fi
-       
-       # volitelné: předvyřeš known_hosts (doporučuju)
+
+       # known_hosts setup
        touch ~/.ssh/known_hosts
        chmod 644 ~/.ssh/known_hosts
-       # ssh-keyscan na cílový host (pokud ho znáš už tady)
        if [ -n "${{ inputs.hostname }}" ]; then
          ssh-keyscan -T 5 "${{ inputs.hostname }}" >> ~/.ssh/known_hosts 2>/dev/null || echo "Warning: ssh-keyscan failed for ${{ inputs.hostname }}"
        fi
-
-       # cleanup askpass helper
-       rm -f ~/askpass.sh
 
     - name: Deploy to server
       uses: deployphp/action@v1
@@ -271,7 +258,7 @@ runs:
         duration=$((now - $timestamp))
         MODIFIED_URL=$(echo "${{inputs.apiCallbackUrl}}" | sed "s/_SUBDOMAIN_/${{inputs.subdomain}}/g")          
         FULL_URL="${MODIFIED_URL}?projectKey=${{ inputs.projectKey }}&authUser=${{ inputs.authuser }}&status=done&branches=${{ inputs.branches }}&runId=${{ github.run_id }}&runtime=${duration}&jobId=${{github.job}}"
-        curl --retry 5 --retry-connrefused --retry-delay 2 --connect-timeout 10 --max-time 120 -u ${{ inputs.apiCallbackAuthUser }}:${{ inputs.apiCallbackAuthPassword }} "$FULL_URL"
+        curl --retry 5 --retry-connrefused --retry-delay 2 --connect-timeout 10 --max-time 120 "$FULL_URL"
 
     - name: Notify about failure
       if: inputs.apiCallbackUrl != '' && failure()
@@ -279,7 +266,7 @@ runs:
       run: |        
         MODIFIED_URL=$(echo "${{inputs.apiCallbackUrl}}" | sed "s/_SUBDOMAIN_/${{inputs.subdomain}}/g")          
         FULL_URL="${MODIFIED_URL}?projectKey=${{ inputs.projectKey }}&authUser=${{ inputs.authuser }}&status=error&branches=${{ inputs.branches }}&runId=${{ github.run_id }}&jobId=${{github.job}}"
-        curl --retry 5 --retry-connrefused --retry-delay 2 --connect-timeout 10 --max-time 120 -u ${{ inputs.apiCallbackAuthUser }}:${{ inputs.apiCallbackAuthPassword }} "$FULL_URL"
+        curl --retry 5 --retry-connrefused --retry-delay 2 --connect-timeout 10 --max-time 120 "$FULL_URL"
 
     - name: Notify about cancel
       if: inputs.apiCallbackUrl != '' && cancelled()
@@ -287,4 +274,4 @@ runs:
       run: |
         MODIFIED_URL=$(echo "${{inputs.apiCallbackUrl}}" | sed "s/_SUBDOMAIN_/${{inputs.subdomain}}/g")          
         FULL_URL="${MODIFIED_URL}?projectKey=${{ inputs.projectKey }}&authUser=${{ inputs.authuser }}&status=cancelled&branches=${{ inputs.branches }}&runId=${{ github.run_id }}&jobId=${{github.job}}"
-        curl --retry 5 --retry-connrefused --retry-delay 2 --connect-timeout 10 --max-time 120 -u ${{ inputs.apiCallbackAuthUser }}:${{ inputs.apiCallbackAuthPassword }} "$FULL_URL"
+        curl --retry 5 --retry-connrefused --retry-delay 2 --connect-timeout 10 --max-time 120 "$FULL_URL"
