--- a/action.yaml
+++ b/action.yaml
@@ -247,13 +247,20 @@ runs:
           ssh-keyscan -T 5 "${{ inputs.hostname }}" >> ~/.ssh/known_hosts 2>/dev/null || echo "Warning: ssh-keyscan failed for ${{ inputs.hostname }}"
         fi
 
+    - name: Download Deployer binary
+      if: inputs.deployerVersion != ''
+      shell: bash
+      run: |
+        curl -LO https://deployer.org/releases/v${{ inputs.deployerVersion }}/deployer.phar
+        chmod +x deployer.phar
+        echo "DEPLOYER_BINARY=deployer.phar" >> $GITHUB_ENV
+
     - name: Deploy to server
       uses: deployphp/action@v1
       with:
         skip-ssh-setup: true # <- důležité, ať nesahá na SSH, už běží náš agent
         dep: deploy ${{ inputs.deployerHostname }} ${{inputs.deployerArguments}}
-        deployer-binary: ${{ inputs.deployerBinary }}
-        deployer-version: ${{ inputs.deployerVersion }}
+        deployer-binary: ${{ env.DEPLOYER_BINARY || inputs.deployerBinary }}
       env:
         SUBDOMAIN: ${{ inputs.subdomain }}
         BRANCHES: ${{ inputs.branches }}
